Update /about page and add /setup page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,5 +35,13 @@
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
             </li>
         {% endif %}
+
+        {% if site.setup == true %}
+            {% if page.title != "Setup" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/setup">Setup</a>
+                </li>
+            {% endif %}
+        {% endif %}
     </ul>
 </nav>
